[BE] refactor: 공용 파일 업로드 서비스 구조 개선